Сделат header и footer

--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -32,4 +32,8 @@ $lightGray: #f8f8f8;
 $provPink: #fef7f0;
 $gray: #8b8b8b;
 $dark: #1a1a1a;
-$formBgC: #fafafa
+$formBgC: #fafafa;
+$blueBayoux: #436372;
+$mystic: #edf1f4;
+$portGore: #1f2044;
+$boulder: #7b7b7b;
