--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -29,17 +29,22 @@ body {
     color: $default;
     display: flex;
     flex-direction: column;
+    background-color: #fff;
 }
-// input,
-// textarea{
-    
-// }
-// *::placeholder {
-    
-// }
+input,
+textarea{
+    padding: 16px 20px;
+    color: #333333;
+    @extend %Rubik-Regular;
+}
+*::placeholder {
+    @extend %Rubik-Regular;
+    font-size: 16px;
+    color: #999999;
+}
 
 .container {
-    max-width: 1800px;
+    max-width: 1200px;
     padding: 0 15px;
     margin: 0 auto;
 }
@@ -48,3 +53,13 @@ body {
     flex-grow: 1;
 }
 
+.link-btn{
+    @extend %Rubik-Regular;
+    color: #fff;
+    font-size: 14px;
+    line-height: 21px;
+    background-color: $btnBgC;
+    padding: 14px 20px 14px 17px;
+    border: none;
+    outline: none;
+}
