Сделана секция Products of the week

--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -8,7 +8,10 @@
 @import './header';
 
 // start index page
-@import './page//index/topSlider';
+@import './page//index/hero';
+@import './page/index/services';
+@import './page/index/productsWeek';
+@import './page/index/productsWeekAccent';
 // end index page
 
 // start about page
