--- a/app/scss/_fonts.scss
+++ b/app/scss/_fonts.scss
@@ -2,8 +2,8 @@
     font-family: 'DMSans-Bold';
     font-weight: 700;
     font-style: normal;
-    src: local('DMSans-Bold'),
-    url('../fonts/DMSans-Bold.woff2') format('woff2'),
+    src:
+        url('../fonts/DMSans-Bold.woff2') format('woff2'),
         url('../fonts/DMSans-Bold.woff') format('woff');
     font-display: swap;
 }
@@ -12,8 +12,8 @@
     font-family: 'DMSans-Medium';
     font-weight: 500;
     font-style: normal;
-    src: local('DMSans-Medium'),
-    url('../fonts/DMSans-Medium.woff2') format('woff2'),
+    src:
+        url('../fonts/DMSans-Medium.woff2') format('woff2'),
         url('../fonts/DMSans-Medium.woff') format('woff');
     font-display: swap;
 }
@@ -22,18 +22,18 @@
     font-family: 'DMSans-Regular';
     font-weight: 400;
     font-style: normal;
-    src: local('DMSans-Regular'),
-    url('../fonts/DMSans-Regular.woff2') format('woff2'),
+    src:
+        url('../fonts/DMSans-Regular.woff2') format('woff2'),
         url('../fonts/DMSans-Regular.woff') format('woff');
     font-display: swap;
 }
 
 @font-face {
-    font-family: 'Poppins-Bold' ;
+    font-family: 'Poppins-Bold';
     font-weight: 700;
     font-style: normal;
-    src: local('Poppins-Bold'),
-    url('../fonts/Poppins-Bold.woff2') format('woff2'),
+    src:
+        url('../fonts/Poppins-Bold.woff2') format('woff2'),
         url('../fonts/Poppins-Bold.woff') format('woff');
     font-display: swap;
 }
@@ -42,8 +42,8 @@
     font-family: 'Rubik-Medium';
     font-weight: 500;
     font-style: normal;
-    src: local('Rubik-Medium'),
-     url('../fonts/Rubik-Medium.woff2') format('woff2'),
+    src:
+        url('../fonts/Rubik-Medium.woff2') format('woff2'),
         url('../fonts/Rubik-Medium.woff') format('woff');
     font-display: swap;
 }
@@ -52,17 +52,18 @@
     font-family: 'Rubik-Regular';
     font-weight: 400;
     font-style: normal;
-    src: local('Rubik-Regular'),
-    url('../fonts/Rubik-Regular.woff2') format('woff2'),
+    src:
+        url('../fonts/Rubik-Regular.woff2') format('woff2'),
         url('../fonts/Rubik-Regular.woff') format('woff');
     font-display: swap;
 }
+
 @font-face {
     font-family: 'Langar-Regular';
     font-weight: 400;
     font-style: normal;
-    src: local('Langar-Regular'),
-    url('../fonts/Langar-Regular.woff2') format('woff2'),
+    src:
+        url('../fonts/Langar-Regular.woff2') format('woff2'),
         url('../fonts/Langar-Regular.woff') format('woff');
     font-display: swap;
 }
