--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -20,7 +20,8 @@ li {
 
 img {
     object-fit: cover;
-    display: block;
+    // display: block;
+    width: 100%;
 }
 
 body {
@@ -42,7 +43,11 @@ textarea{
     font-size: 16px;
     color: #999999;
 }
-
+.wrapper{
+    max-width: 1800px;
+    padding: 0 15px;
+    margin: 0 auto;
+}
 .container {
     max-width: 1200px;
     padding: 0 15px;
@@ -62,4 +67,10 @@ textarea{
     padding: 14px 20px 14px 17px;
     border: none;
     outline: none;
+}
+.section-title{
+    @extend %DMSans-Bold;
+    font-size: 36px;
+    color: $title;
+    text-align: center;
 }
