--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -31,9 +31,11 @@ $accent: #fcd7b6;
 $lightGray: #f8f8f8;
 $provPink: #fef7f0;
 $gray: #8b8b8b;
+$darkGray: #414141;
 $dark: #1a1a1a;
 $formBgC: #fafafa;
 $blueBayoux: #436372;
 $mystic: #edf1f4;
 $portGore: #1f2044;
 $boulder: #7b7b7b;
+$scorpion: #585858;
