Добелана страница about Us и доделан фильтр на главной странице

--- a/app/scss/_footer.scss
+++ b/app/scss/_footer.scss
@@ -94,6 +94,13 @@
     &__item{
         padding-right: 14px;
         margin-right: 16px;
-        border-right:1px solid $boulder;
+        &:not(:last-child){
+            border-right:1px solid $boulder;
+        }
     }
+}
+
+// filter
+.hide{
+    display: none;
 }
