--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -20,7 +20,9 @@
 // end index page
 
 // start about page
-@import './page/about/about';
+@import './page/aboutUs/aboutInfo';
+@import './page/aboutUs/servicesCounter';
+@import './page/aboutUs/ourTeam';
 // end about page
 
 @import './footer';
