--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -74,3 +74,35 @@ textarea{
     color: $title;
     text-align: center;
 }
+
+.breadcrumbs{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 34px 0;
+    background-color: #edf1f4;
+    &__title{
+        @extend %Rubik-Regular;
+        font-size: 36px;
+        line-height: 36px;
+        color: $default;
+        margin-bottom: 10px;
+    }
+}
+.breadcrumbs-nav{
+    &__link{
+        @extend %Rubik-Regular;
+        font-size: 14px;
+        list-style: 24px;
+        color: $default;
+        opacity: .6;
+        padding: 0 5px;
+        position: relative;
+        &:not(:last-child)::after{
+            content: '/';
+            position: absolute;
+            right: -6px;
+            top:2px;
+        }
+    }
+}
