--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -12,6 +12,8 @@
     &-list {
         display: flex;
         align-items: center;
+        margin-left: 122px;
+        margin-top: -8px;
     }
 
     &-item {
@@ -136,7 +138,8 @@
     cursor: pointer;
     position: relative;
     outline: none;
-    &::before{
+
+    &::before {
         content: '';
         background-image: url(../images/dest/icons/burgerBg.svg);
         background-repeat: no-repeat;
@@ -145,8 +148,8 @@
         width: 20px;
         height: 20px;
         position: absolute;
-        top:50%;
-        left:50%;
+        top: 50%;
+        left: 50%;
         transform: translate(-50%, -50%);
     }
 }
