--- a/app/scss/page/index/_productsWeek.scss
+++ b/app/scss/page/index/_productsWeek.scss
@@ -31,8 +31,7 @@
         color: $gray;
         cursor: pointer;
 
-        &:hover,
-        &--active {
+        &:hover {
             color: $title;
         }
 
@@ -41,7 +40,9 @@
         }
     }
 }
-
+.filters-btn--active{
+    color: $title;
+}
 .productsWeek__item {
     text-align: center;
     border-radius: 10px;
@@ -54,6 +55,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    transition: all .5s;
     &:hover{
         .productsWeek__item-boxLink{
             opacity: 1;
