--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -25,4 +25,9 @@
 @import './page/aboutUs/ourTeam';
 // end about page
 
+// start blogs page
+@import './page/blogs/blogs';
+@import './page/blogs/asideFilters';
+// end blogs page
+
 @import './footer';
