--- a/app/scss/page/index/_partners.scss
+++ b/app/scss/page/index/_partners.scss
@@ -1,5 +1,6 @@
 .partners{
     padding: 94px 0 88px;
+    background-color: $provPink;
     &__container{
         display: flex;
         flex-wrap: wrap;
